Libraries/LibWeb/CSS/Default.css
/* Default user-agent stylesheet for LibWeb
 * Note: This stylesheet starts with a bunch of ad-hoc custom rules.
 *       After that, rules from the HTML spec follow.
 */

html {
    font-family: serif;
}

body {
    margin: 8px;
}

center {
    text-align: -libweb-center;
}

blink {
    display: inline;
}

/* FIXME: This doesn't seem right. */
label {
    display: inline-block;
}

/* FIXME: This is a temporary hack until we can render a native-looking frame for these. */
input:not([type=submit], input[type=button], input[type=image], input[type=reset], input[type=color], input[type=checkbox], input[type=file], input[type=radio], input[type=range]), textarea {
    border: 1px solid ButtonBorder;
    min-height: 16px;
    cursor: text;

    background-color: Field;
    color: FieldText;
}

textarea {
    padding: 2px;
    display: inline-block;
    overflow: auto;
    font-family: monospace;
    resize: both;
}

input::placeholder, textarea::placeholder {
    color: GrayText;
    line-height: initial;
}

button, input[type=submit], input[type=button], input[type=reset], select, ::file-selector-button {
    padding: 1px 4px;
    background-color: ButtonFace;
    border: 1px solid ButtonBorder;
    color: ButtonText;
    cursor: default;

    &:hover {
        background-color: -libweb-ButtonFaceHover;
    }

    &:disabled {
        background-color: -libweb-ButtonFaceDisabled;
        color: GrayText;
    }
}

input[type=image] {
    cursor: pointer;
}

option {
    display: none;
}

/* Custom <input type="range"> styles */
input[type=range] {
    display: inline-block;
    width: 20ch;
    height: 16px;

    &::slider-track {
        display: block;
        position: relative;
        height: 4px;
        width: 100%;
        margin-top: 6px;
        background-color: AccentColorText;
        border: 1px solid rgba(0, 0, 0, 0.5);
    }

    &::slider-fill {
        display: block;
        position: absolute;
        height: 100%;
        background-color: AccentColor;
    }

    &::slider-thumb {
        display: block;
        margin-top: -6px;
        width: 16px;
        height: 16px;
        transform: translateX(-50%);
        border-radius: 50%;
        outline: 1px solid rgba(0, 0, 0, 0.5);
        z-index: 1;
        background-color: AccentColor;
    }
}

/* Custom <meter> styles */
meter {
    display: inline-block;
    width: 300px;
    height: 12px;

    &::slider-track {
        display: block;
        height: 100%;
        background-color: hsl(0, 0%, 96%);
        border: 1px solid rgba(0, 0, 0, 0.5);
    }

    &::slider-fill {
        display: block;
        height: 100%;
    }

    &:optimal-value::slider-fill {
        background-color: hsl(141, 53%, 53%);
    }

    &:suboptimal-value::slider-fill {
        background-color: hsl(48, 100%, 67%);
    }

    &:even-less-good-value::slider-fill {
        background-color: hsl(348, 100%, 61%);
    }
}

/* Custom <progress> styles */
progress {
    display: inline-block;
    width: 300px;
    height: 12px;

    &::slider-track {
        display: block;
        height: 100%;
        background-color: AccentColorText;
        border: 1px solid rgba(0, 0, 0, 0.5);
    }

    &::slider-fill {
        display: block;
        height: 100%;
        background-color: AccentColor;
    }
}

/* 15.3.1 Hidden elements
 * https://html.spec.whatwg.org/multipage/rendering.html#hidden-elements
 */

area, base, basefont, datalist, head, link, meta, noembed,
noframes, param, rp, script, style, template, title {
    display: none;
}

[hidden]:not([hidden=until-found i]) {
    display: none;
}

[hidden=until-found i]:not(embed) {
    content-visibility: hidden;
}

embed[hidden] {
    display: inline;
    height: 0;
    width: 0;
}

input[type=hidden i] {
    display: none !important;
}

@media (scripting) {
    noscript {
        display: none !important;
    }
}

/* 15.3.2 The page
 * https://html.spec.whatwg.org/multipage/rendering.html#the-page
 */

html, body {
    display: block;
}

/* 15.3.3 Flow content
 * https://html.spec.whatwg.org/multipage/rendering.html#flow-content-3
 */
address, blockquote, center, dialog, div, figure, figcaption, footer, form,
header, hr, legend, listing, main, p, plaintext, pre, search, xmp {
    display: block;
}

blockquote, figure, listing, p, plaintext, pre, xmp {
    margin-block: 1em;
}

blockquote, figure {
    margin-inline: 40px;
}

address {
    font-style: italic;
}

listing, plaintext, pre, xmp {
    font-family: monospace;
    white-space: pre;
}

dialog:not([open]) {
    display: none;
}

dialog {
    position: absolute;
    inset-inline-start: 0;
    inset-inline-end: 0;
    width: fit-content;
    height: fit-content;
    margin: auto;
    border: solid;
    padding: 1em;
    background-color: Canvas;
    color: CanvasText;
}

dialog:modal {
    position: fixed;
    overflow: auto;
    inset-block: 0;
    max-width: calc(100% - 6px - 2em);
    max-height: calc(100% - 6px - 2em);
}

dialog::backdrop {
    background: rgba(0, 0, 0, 0.1);
}

[popover]:not(:popover-open):not(dialog[open]) {
    display:none;
}

dialog:popover-open {
    display:block;
}

[popover] {
    position: fixed;
    inset: 0;
    width: fit-content;
    height: fit-content;
    margin: auto;
    border: solid;
    padding: 0.25em;
    overflow: auto;
    color: CanvasText;
    background-color: Canvas;
}

:popover-open::backdrop {
    position: fixed;
    inset: 0;
    pointer-events: none !important;
    background-color: transparent;
}

/* 4.2. The ::backdrop Pseudo-Element
 * https://drafts.csswg.org/css-position-4/#backdrop
 */
::backdrop {
    position: fixed;
    inset: 0;
}

slot {
    display: contents;
}

/* 15.3.4 Phrasing content
 * https://html.spec.whatwg.org/multipage/rendering.html#phrasing-content-3
 */

cite, dfn, em, i, var {
    font-style: italic;
}

b, strong {
    font-weight: bolder;
}

code, kbd, samp, tt {
    font-family: monospace;
}

big {
    font-size: larger;
}
/* ... */

